Stop producing a maven war, instead use ltgt gwt plugin
This commit changes nothing in the output except for how it is produced,
and ideally paves the way to more simply producing just the output we
need for the website.